icon wrapping fix

--- a/src/dataloaderinterface/static/dataloaderinterface/css/style.css
+++ b/src/dataloaderinterface/static/dataloaderinterface/css/style.css
@@ -254,7 +254,7 @@ div.registration-data .material-icons {
 }
 
 div.registration-data > table tr td:first-child {
-    min-width: 165px;
+    min-width: 170px;
 }
 
 table.shade-first-col tr td:first-child {
